force-app/main/default/objects/AV_Sales__c/AV_Sales__c.object-meta.xml
<CustomObject>
    <description>Objeto donde se almacenan las ventas de los clientes</description>
    <label>Venta</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Venta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ventas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>