force-app/main/default/objects/AV_Sales__c/fields/AV_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>AV_Aplicacion__c</fullName>
    <description>Aplicación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aplicación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>