force-app/main/default/objects/AV_Sales__c/fields/AV_AreaContrato__c.field-meta.xml
<CustomField>
    <fullName>AV_AreaContrato__c</fullName>
    <description>Área de contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Area Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>