force-app/main/default/objects/AV_Sales__c/fields/AV_Base__c.field-meta.xml
<CustomField>
    <fullName>AV_Base__c</fullName>
    <description>Base de la venta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>