force-app/main/default/objects/AV_Sales__c/fields/AV_BatchProcessSaleExperience__c.field-meta.xml
<CustomField>
    <fullName>AV_BatchProcessSaleExperience__c</fullName>
    <description>Field to check if the batch process need to be checked the record or not.</description>
    <formula>IF(
   ISBLANK(AV_FechaProcesadoBatch__c),
   &apos;ToBeProcess&apos;,
   AV_ExternalID__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proceso Batch - Experiencia Venta</label>
    <type>Text</type>
</CustomField>