force-app/main/default/objects/AV_Sales__c/fields/AV_CANALVAR__c.field-meta.xml
<CustomField>
    <fullName>AV_CANALVAR__c</fullName>
    <description>CANALVAR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CANALVAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>