force-app/main/default/objects/AV_Sales__c/fields/AV_CENTINT__c.field-meta.xml
<CustomField>
    <fullName>AV_CENTINT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro Intouch asociado</description>
    <label>Centro Intouch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ventas (Centro Intouch)</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>