force-app/main/default/objects/AV_Sales__c/fields/AV_CentroContrato__c.field-meta.xml
<CustomField>
    <fullName>AV_CentroContrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Centro Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>