force-app/main/default/objects/AV_Sales__c/fields/AV_CentroVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_CentroVenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro de la venta</description>
    <label>Oficina</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ventas (Centro Venta)</relationshipLabel>
    <relationshipName>Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>