force-app/main/default/objects/AV_Sales__c/fields/AV_CENTTECLEO__c.field-meta.xml
<CustomField>
    <fullName>AV_CENTTECLEO__c</fullName>
    <description>Centro tecleo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Centro Tecleo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>