force-app/main/default/objects/AV_Sales__c/fields/AV_ClaseVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_ClaseVenta__c</fullName>
    <description>Clase de venta</description>
    <label>Operación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Cancelación</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Operativa</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Venta</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Anulación cancelación</label>
            </value>
            <value>
                <fullName>AV</fullName>
                <label>Anulación venta</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Anulación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>