force-app/main/default/objects/AV_Sales__c/fields/AV_Cliente__c.field-meta.xml
<CustomField>
    <fullName>AV_Cliente__c</fullName>
    <description>Cliente de la venta</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ventas</relationshipLabel>
    <relationshipName>Ventas1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>