force-app/main/default/objects/AV_Sales__c/fields/AV_CODALER__c.field-meta.xml
<CustomField>
    <fullName>AV_CODALER__c</fullName>
    <description>CODALER</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CODALER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>