force-app/main/default/objects/AV_Sales__c/fields/AV_CodigoCanal__c.field-meta.xml
<CustomField>
    <fullName>AV_CodigoCanal__c</fullName>
    <description>Field used in reports to know the Canal codes</description>
    <formula>IF(AV_IndicadorR2B__c = &apos;S&apos;,&apos;R2B&apos;,
IF( ISPICKVAL(AV_Canal__c  , &apos;010010000&apos;) , &apos;Oficina&apos;, 
IF( OR(ISPICKVAL(AV_Canal__c  , &apos;020030010&apos;), ISPICKVAL(AV_Canal__c  , &apos;020030040&apos;), ISPICKVAL(AV_Canal__c  , &apos;020040020&apos;)), &apos;Now&apos;,
IF( ISPICKVAL(AV_Canal__c  , &apos;030020070&apos;), &apos;ImaginBank&apos;, &apos;Otros&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Canal</label>
    <type>Text</type>
</CustomField>