force-app/main/default/objects/AV_Sales__c/fields/AV_DelimitadorSIA__c.field-meta.xml
<CustomField>
    <fullName>AV_DelimitadorSIA__c</fullName>
    <description>Delimitador SIA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delimitador SIA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>