force-app/main/default/objects/AV_Sales__c/fields/AV_DuracionImposicion__c.field-meta.xml
<CustomField>
    <fullName>AV_DuracionImposicion__c</fullName>
    <description>Duración imposición</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Duración Imposición</label>
    <length>255</length>
    <type>Text</type>
</CustomField>