force-app/main/default/objects/AV_Sales__c/fields/AV_DURAIM__c.field-meta.xml
<CustomField>
    <fullName>AV_DURAIM__c</fullName>
    <description>DURAIM</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DURAIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>