force-app/main/default/objects/AV_Sales__c/fields/AV_EmpleadoModificacion__c.field-meta.xml
<CustomField>
    <fullName>AV_EmpleadoModificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Empleado de modificación</description>
    <label>Empleado Modificacion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ventas (Empleado Modificacion)</relationshipLabel>
    <relationshipName>Ventas3</relationshipName>
    <type>Lookup</type>
</CustomField>