force-app/main/default/objects/AV_Sales__c/fields/AV_ExternalIDProdNivel20__c.field-meta.xml
<CustomField>
    <fullName>AV_ExternalIDProdNivel20__c</fullName>
    <formula>IF( AV_Producto__r.AV_Nivel__c = &apos;10&apos;, AV_Producto__r.AV_NombrePF__r.AV_ExternalID__c, 
     IF( AV_Producto__r.AV_Nivel__c = &apos;1&apos;, AV_Producto__r.AV_NombrePF__r.AV_NombrePF__r.AV_ExternalID__c, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Externo Producto Nivel 20</label>
    <type>Text</type>
</CustomField>