force-app/main/default/objects/AV_Sales__c/fields/AV_FechaModificacion__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaModificacion__c</fullName>
    <description>Fecha de modificación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Modificación</label>
    <type>Date</type>
</CustomField>