force-app/main/default/objects/AV_Sales__c/fields/AV_FechaReasignacion__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaReasignacion__c</fullName>
    <description>Fecha de reasignación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Reasignacion</label>
    <type>Date</type>
</CustomField>