force-app/main/default/objects/AV_Sales__c/fields/AV_FechaVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaVenta__c</fullName>
    <description>Fecha de la venta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Venta</label>
    <type>Date</type>
</CustomField>