force-app/main/default/objects/AV_Sales__c/fields/AV_GestorAsignadoVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_GestorAsignadoVenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gestor asignado para la venta</description>
    <label>Empleado/a</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ventas (Gestor Asignado Venta)</relationshipLabel>
    <relationshipName>Ventas1</relationshipName>
    <type>Lookup</type>
</CustomField>