force-app/main/default/objects/AV_Sales__c/fields/AV_Importe__c.field-meta.xml
<CustomField>
    <fullName>AV_Importe__c</fullName>
    <description>Importe de la venta</description>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>