force-app/main/default/objects/AV_Sales__c/fields/AV_Interes__c.field-meta.xml
<CustomField>
    <fullName>AV_Interes__c</fullName>
    <description>Intereses de la venta</description>
    <label>Interés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>