force-app/main/default/objects/AV_Sales__c/fields/AV_InteresDiferencial__c.field-meta.xml
<CustomField>
    <fullName>AV_InteresDiferencial__c</fullName>
    <description>Tipo de interés diferencial</description>
    <label>Tipo de Interés Diferencial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>