force-app/main/default/objects/AV_Sales__c/fields/AV_InteresVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_InteresVenta__c</fullName>
    <label>Interés Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>