force-app/main/default/objects/AV_Sales__c/fields/AV_LineaCredito__c.field-meta.xml
<CustomField>
    <fullName>AV_LineaCredito__c</fullName>
    <description>Línea de crédito</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Línea de Crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>