force-app/main/default/objects/AV_Sales__c/fields/AV_MARGEN2__c.field-meta.xml
<CustomField>
    <fullName>AV_MARGEN2__c</fullName>
    <description>MARGEN2</description>
    <label>MARGEN2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>