force-app/main/default/objects/AV_Sales__c/fields/AV_Margen__c.field-meta.xml
<CustomField>
    <fullName>AV_Margen__c</fullName>
    <description>Margen de la venta (porcentaje)</description>
    <label>Margen (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>