force-app/main/default/objects/AV_Sales__c/fields/AV_MARINTOUCH__c.field-meta.xml
<CustomField>
    <fullName>AV_MARINTOUCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Cliente Intouch</label>
    <type>Checkbox</type>
</CustomField>