force-app/main/default/objects/AV_Sales__c/fields/AV_MesVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_MesVenta__c</fullName>
    <description>Mes de la venta</description>
    <formula>IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;1&apos;, &apos;Enero&apos;, IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;2&apos;, &apos;Febrero&apos;,IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;3&apos;, &apos;Marzo&apos;, IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;4&apos;, &apos;Abril&apos;,IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;5&apos;, &apos;Mayo&apos;,IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;6&apos;, &apos;Junio&apos;, IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;7&apos;, &apos;Julio&apos;,IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;8&apos;, &apos;Agosto&apos;,IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;9&apos;, &apos;Septiembre&apos;,IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;10&apos;, &apos;Octubre&apos;, IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;11&apos;, &apos;Noviembre&apos;, IF (TEXT(MONTH( AV_FechaVenta__c )) == &apos;12&apos;, &apos;Diciembre&apos;, &apos;Mes Erróneo&apos;)))) ) )) ) ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes Venta</label>
    <type>Text</type>
</CustomField>