force-app/main/default/objects/AV_Sales__c/fields/AV_ModalidadContrato__c.field-meta.xml
<CustomField>
    <fullName>AV_ModalidadContrato__c</fullName>
    <description>Modalidad de contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Modalidad Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>