force-app/main/default/objects/AV_Sales__c/fields/AV_NumeroContrato__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroContrato__c</fullName>
    <description>Número de contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Número Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>