force-app/main/default/objects/AV_Sales__c/fields/AV_NumeroOperacion__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroOperacion__c</fullName>
    <description>Número de operación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Número Operación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>