force-app/main/default/objects/AV_Sales__c/fields/AV_OrigenCliente__c.field-meta.xml
<CustomField>
    <fullName>AV_OrigenCliente__c</fullName>
    <description>Origen del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origen Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>