force-app/main/default/objects/AV_Sales__c/fields/AV_OrigenContrato__c.field-meta.xml
<CustomField>
    <fullName>AV_OrigenContrato__c</fullName>
    <description>Origen del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origen Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>