force-app/main/default/objects/AV_Sales__c/fields/AV_OrigenProducto__c.field-meta.xml
<CustomField>
    <fullName>AV_OrigenProducto__c</fullName>
    <description>Origen del producto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origen Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>