force-app/main/default/objects/AV_Sales__c/fields/AV_ParentExternalId__c.field-meta.xml
<CustomField>
    <fullName>AV_ParentExternalId__c</fullName>
    <formula>IF( AV_Producto__r.AV_Nivel__c = &apos;20&apos; , AV_Producto__r.AV_NombrePF__r.AV_ExternalID__c , 
  IF( AND( AV_Producto__r.AV_Nivel__c = &apos;10&apos;, AV_Producto__r.AV_NombrePF__r.AV_Nivel__c = &apos;20&apos;), AV_Producto__r.AV_NombrePF__r.AV_NombrePF__r.AV_ExternalID__c, 
    IF( AND( AV_Producto__r.AV_Nivel__c = &apos;1&apos;,  AV_Producto__r.AV_NombrePF__r.AV_Nivel__c = &apos;10&apos;, AV_Producto__r.AV_NombrePF__r.AV_NombrePF__r.AV_Nivel__c = &apos;20&apos;), AV_Producto__r.AV_NombrePF__r.AV_NombrePF__r.AV_NombrePF__r.AV_ExternalID__c, 
     null
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent External Id</label>
    <type>Text</type>
</CustomField>