force-app/main/default/objects/AV_Sales__c/fields/AV_PCTSIG__c.field-meta.xml
<CustomField>
    <fullName>AV_PCTSIG__c</fullName>
    <description>PCTSIG</description>
    <label>PCTSIG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>