force-app/main/default/objects/AV_Sales__c/fields/AV_PFExperiencia__c.field-meta.xml
<CustomField>
    <fullName>AV_PFExperiencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductoFicha-Experiencia</label>
    <referenceTo>AV_ProductExperience__c</referenceTo>
    <relationshipLabel>Ventas</relationshipLabel>
    <relationshipName>PFExperiencia</relationshipName>
    <type>Lookup</type>
</CustomField>