force-app/main/default/objects/AV_Sales__c/fields/AV_Producto__c.field-meta.xml
<CustomField>
    <fullName>AV_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto de la venta</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ventas</relationshipLabel>
    <relationshipName>Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>