force-app/main/default/objects/AV_Sales__c/fields/AV_ProductoNivel20Name__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductoNivel20Name__c</fullName>
    <formula>IF( AV_Producto__r.AV_Nivel__c = &apos;10&apos;, AV_Producto__r.AV_NombrePF__r.Name,
IF( AV_Producto__r.AV_Nivel__c = &apos;1&apos;, AV_Producto__r.AV_NombrePF__r.AV_NombrePF__r.Name, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto Nivel 20</label>
    <type>Text</type>
</CustomField>