force-app/main/default/objects/AV_Sales__c/fields/AV_ProductoPF__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductoPF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ProductoPF</description>
    <label>ProductoPF</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ventas (ProductoPF)</relationshipLabel>
    <relationshipName>Ventas1</relationshipName>
    <type>Lookup</type>
</CustomField>