force-app/main/default/objects/AV_Sales__c/fields/AV_SaldoDisponible__c.field-meta.xml
<CustomField>
    <fullName>AV_SaldoDisponible__c</fullName>
    <description>Saldo disponible</description>
    <label>Saldo Disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>