force-app/main/default/objects/AV_Sales__c/fields/AV_Semana__c.field-meta.xml
<CustomField>
    <fullName>AV_Semana__c</fullName>
    <description>Semana de la venta</description>
    <formula>&apos;Semana &apos; + TEXT(
IF( 
  CEILING(( AV_FechaVenta__c - DATE( YEAR( AV_FechaVenta__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING((  AV_FechaVenta__c - DATE( YEAR( AV_FechaVenta__c ), 1, 1) + 1) / 7)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semana</label>
    <type>Text</type>
</CustomField>