force-app/main/default/objects/AV_Sales__c/fields/AV_SUBCODALER__c.field-meta.xml
<CustomField>
    <fullName>AV_SUBCODALER__c</fullName>
    <description>SUBCODALER</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SUBCODALER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>