force-app/main/default/objects/AV_Sales__c/fields/AV_TipoOperacion__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoOperacion__c</fullName>
    <description>Tipo de operación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Operación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>