force-app/main/default/objects/AV_Sales__c/fields/AV_TipoVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoVenta__c</fullName>
    <inlineHelpText>Tipo de venta</inlineHelpText>
    <label>Descripción</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>010</fullName>
                <label>Primera aportacion</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Nueva aportacion</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Aportacion periodica</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Traspaso externo</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>Limite de riesgo inicial</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>Cambio limite de riesgo</label>
            </value>
            <value>
                <fullName>030</fullName>
                <label>Primera disposicion de riesgo</label>
            </value>
            <value>
                <fullName>031</fullName>
                <label>Nueva disposicion de riesgo</label>
            </value>
            <value>
                <fullName>040</fullName>
                <label>Subrogacion</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Alta producto</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Cambio condiciones</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Alta titular</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>Activacion de Tarjeta Stock</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>Alta Seguro Garantía de Compra</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>Alta Seguro Garantía Mensual</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>Alta Seguro Saldo Pendiente</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>Alta contrato prima única</label>
            </value>
            <value>
                <fullName>131</fullName>
                <label>Alta contrato prima periódica</label>
            </value>
            <value>
                <fullName>132</fullName>
                <label>Cancelación contrato prima única</label>
            </value>
            <value>
                <fullName>133</fullName>
                <label>Cancelación contrato prima periódica</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>Alta Préstamo Promocaixa</label>
            </value>
            <value>
                <fullName>151</fullName>
                <label>Alta Tarjeta Promocaixa</label>
            </value>
            <value>
                <fullName>152</fullName>
                <label>Alta Mybox Promocaixa</label>
            </value>
            <value>
                <fullName>153</fullName>
                <label>CompraEstrella con Suscripción tarjeta</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Cancelación contrato</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>Baja titular</label>
            </value>
            <value>
                <fullName>210</fullName>
                <label>Amortización capital</label>
            </value>
            <value>
                <fullName>211</fullName>
                <label>Baja Seguro Garantía de Compra</label>
            </value>
            <value>
                <fullName>212</fullName>
                <label>Baja Seguro Garantía Mensual</label>
            </value>
            <value>
                <fullName>213</fullName>
                <label>Baja Seguro Saldo Pendiente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>