force-app/main/default/objects/AV_Sales__c/fields/AV_Titular2__c.field-meta.xml
<CustomField>
    <fullName>AV_Titular2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Titular 2 de la venta</description>
    <label>Titular 2 Venta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ventas (Titular 2 Venta)</relationshipLabel>
    <relationshipName>Ventas2</relationshipName>
    <type>Lookup</type>
</CustomField>