force-app/main/default/objects/AV_Sales__c/fields/AV_Titular3__c.field-meta.xml
<CustomField>
    <fullName>AV_Titular3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Titular 3 de la venta</description>
    <label>Titular 3 Venta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ventas (Titular 3 Venta)</relationshipLabel>
    <relationshipName>Ventas3</relationshipName>
    <type>Lookup</type>
</CustomField>