force-app/main/default/objects/AV_Sales__c/fields/AV_ToDelete__c.field-meta.xml
<CustomField>
    <fullName>AV_ToDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Delete</label>
    <type>Checkbox</type>
</CustomField>