force-app/main/default/objects/AV_Sales__c/fields/AV_TPMAINCO__c.field-meta.xml
<CustomField>
    <fullName>AV_TPMAINCO__c</fullName>
    <description>TPMAINCO</description>
    <label>TPMAINCO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>