force-app/main/default/objects/AV_Sales__c/fields/AV_TPMARINI__c.field-meta.xml
<CustomField>
    <fullName>AV_TPMARINI__c</fullName>
    <description>TPMARINI</description>
    <label>TPMARINI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>