force-app/main/default/objects/AV_Sales__c/fields/AV_VerDetalle__c.field-meta.xml
<CustomField>
    <fullName>AV_VerDetalle__c</fullName>
    <formula>IF(!ISBLANK(AV_ProductoNivel10Name__c),HYPERLINK(&quot;/lightning/r/AV_Sales__c/&quot;+ Id +&quot;/view&quot;,AV_ProductoNivel10Name__c, &quot;_self&quot;),HYPERLINK(&quot;/lightning/r/AV_Sales__c/&quot;+ Id +&quot;/view&quot;,&quot;-&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ver Detalle</label>
    <type>Text</type>
</CustomField>