force-app/main/default/objects/AV_Sales__c/recordTypes/AV_Venta.recordType-meta.xml
<RecordType>
    <fullName>AV_Venta</fullName>
    <active>true</active>
    <label>Venta</label>
</RecordType>